Wow, unit testing!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
 
     "rootDir": "./",
     "baseUrl": "server/",
-    "outDir": "dist/"
+    "outDir": "dist/",
   },
-  "include": ["server/**/*.ts", "public/*.ts", "api/index.ts"],
+  "include": ["server/**/*.ts", "public/*.ts", "test/*.ts", "api/index.ts"],
   "exclude": ["node_modules", ".vscode"]
 }
