--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "watch": "npm run build && concurrently \"tsc -w\" \"nodemon -r source-map-support/register dist/api/index.js\"",
     "start": "npm run build && node -r source-map-support/register dist/api/index.js",
     "lint": "npx eslint . --ext .ts && npx prettier . --check",
-    "format": "npx eslint . --ext .ts --fix && npx prettier . --write"
+    "format": "npx eslint . --ext .ts --fix && npx prettier . --write",
+    "test": "npx mocha -r ts-node/register 'test/**/*.ts'"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/mocha": "^10.0.7",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -23,9 +25,11 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "mocha": "^10.7.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2",
     "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
