Route validation! Thanks American Airlines for boring me to this point!

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
     "morgan": "^1.10.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "zod": "^3.23.8"
   },
   "prettier": {
     "trailingComma": "all",
