--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "conception",
-  "version": "0.1-alpha",
-  "description": "POC for web app with concepts",
-  "main": "dist/api/index.js",
+  "name": "backend-starter",
+  "version": "0.0.1",
   "scripts": {
     "build": "tsc && copyfiles public/*.html public/*.css public/favicon.ico dist/",
     "watch": "npm run build && concurrently \"tsc -w\" \"nodemon -r source-map-support/register dist/api/index.js\"",
