--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && node -r source-map-support/register dist-server/api/index.js",
     "lint": "npx eslint . --ext .ts && npx prettier . --check",
     "format": "npx eslint . --ext .ts --fix && npx prettier . --write",
-    "test": "npx mocha -r ts-node/register 'test/**/*.ts'"
+    "test": "npm run build && mocha -r source-map-support/register dist-server/test"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -27,7 +27,6 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.9.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
