Move TS config in anticipation of the frontend

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "backend-starter",
   "version": "0.0.1",
   "scripts": {
-    "build": "tsc && copyfiles public/*.html public/*.css public/favicon.ico dist/",
-    "watch": "npm run build && concurrently \"tsc -w\" \"nodemon -r source-map-support/register dist/api/index.js\"",
-    "start": "npm run build && node -r source-map-support/register dist/api/index.js",
+    "build": "tsc -p server/tsconfig.json && copyfiles public/*.html public/*.css public/favicon.ico dist-server/",
+    "watch": "npm run build && concurrently \"tsc -w\" \"nodemon -r source-map-support/register dist-server/api/index.js\"",
+    "start": "npm run build && node -r source-map-support/register dist-server/api/index.js",
     "lint": "npx eslint . --ext .ts && npx prettier . --check",
     "format": "npx eslint . --ext .ts --fix && npx prettier . --write",
     "test": "npx mocha -r ts-node/register 'test/**/*.ts'"
