--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -7,7 +7,7 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "server/tsconfig.json"
   },
   "plugins": ["@typescript-eslint", "unused-imports", "prettier"],
   "rules": {
